Rename Controllers and templates, adapt routes

--- a/alarm-ionic/www/templates/tabs.html
+++ b/alarm-ionic/www/templates/tabs.html
@@ -7,8 +7,8 @@ navigation history that also transitions its views in and out.
 
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Wecker" icon-off="ion-ios7-clock-outline" icon-on="ion-ios7-clock" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <ion-tab title="Wecker" icon-off="ion-ios7-clock-outline" icon-on="ion-ios7-clock" href="#/tab/alarms">
+    <ion-nav-view name="tab-alarms"></ion-nav-view>
   </ion-tab>
 
 
