--- a/alarm-ionic/www/templates/tab-settings.html
+++ b/alarm-ionic/www/templates/tab-settings.html
@@ -1,8 +1,8 @@
-<ion-view view-title="Account">
+<ion-view view-title="Einstellungen">
   <ion-content>
     <ion-list>
       <ion-item class="item-toggle">
-        Enable Friends
+        Wecker aktiv
         <label class="toggle">
           <input type="checkbox" ng-model="settings.enableFriends">
           <div class="track">
