--- a/alarm-ionic/www/templates/tabs.html
+++ b/alarm-ionic/www/templates/tabs.html
@@ -13,13 +13,13 @@ navigation history that also transitions its views in and out.
 
 
   <!-- Chats Tab -->
-  <ion-tab title="Licht" icon-off="ion-ios7-lightbulb-outline" icon-on="ion-ios7-lightbulb" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+  <ion-tab title="Licht" icon-off="ion-ios7-lightbulb-outline" icon-on="ion-ios7-lightbulb" href="#/tab/lights">
+    <ion-nav-view name="tab-lights"></ion-nav-view>
   </ion-tab>
 
   <!-- Account Tab -->
-  <ion-tab title="Einstellungen" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
+  <ion-tab title="Einstellungen" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" href="#/tab/settings">
+    <ion-nav-view name="tab-settings"></ion-nav-view>
   </ion-tab>
 
 
