--- a/alarm-ionic/www/templates/tab-lights.html
+++ b/alarm-ionic/www/templates/tab-lights.html
@@ -1,10 +1,10 @@
 <ion-view view-title="Lampe">
   <ion-content>
-    <ion-list>
-      <ion-item class="item-avatar" ng-repeat="friend in friends" type="item-text-wrap" href="#/tab/friend/{{friend.id}}">
-        <img ng-src="{{friend.face}}">
-        <h2>{{friend.name}}</h2>
-      </ion-item>
-    </ion-list>
+	<ion-toggle ng-model="lightStatus.on" ng-checked="lightStatus.on" ng-change="lightStatusChange()">Licht an/aus</ion-toggle>
+<!--
+	<div class="item">
+          <pre ng-bind="lightStatus | json"></pre>
+    </div>
+-->
   </ion-content>
 </ion-view>
