--- a/alarm-ionic/www/templates/tab-settings.html
+++ b/alarm-ionic/www/templates/tab-settings.html
@@ -1,15 +1,12 @@
 <ion-view view-title="Einstellungen">
   <ion-content>
-    <ion-list>
-      <ion-item class="item-toggle">
-        Wecker aktiv
-        <label class="toggle">
-          <input type="checkbox" ng-model="settings.enableFriends">
-          <div class="track">
-            <div class="handle"></div>
-          </div>
-        </label>
-      </ion-item>
-    </ion-list>
+     	<label class="item item-input item-stacked-label"> 
+     		<span class="input-label">REST Base URL</span> 
+     		<input type="text" ng-model="settings.baseUrl" placeholder="http://<baseurl>:<port>/">
+		</label>
+		
+		<button class="button button-positive" ng-click="save()">
+  			Speichern
+		</button>
   </ion-content>
 </ion-view>
