--- a/alarm-ionic/www/templates/tab-alarms.html
+++ b/alarm-ionic/www/templates/tab-alarms.html
@@ -2,8 +2,8 @@
   <ion-content class="padding">
 	<ion-list>
       <ion-item class="item-alarm" ng-repeat="alarm in alarms" type="item-text-wrap" href="#/tab/alarm/{{alarm.id}}">
-        <h2>{{alarm.name}}</h2>
-        <span ng-bind="{{alarm.id}}">        
+        <h2>{{alarm.name}} ({{alarm.id}})</h2>
+        <span>Uhrzeit: {{alarm.hour}}:{{alarm.minute}}</span>        
       </ion-item>
     </ion-list>    
   </ion-content>
